--- a/usgs/build.gradle
+++ b/usgs/build.gradle
@@ -15,6 +15,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 dependencies {
@@ -35,4 +38,7 @@ dependencies {
 
     api 'com.google.dagger:dagger:2.27'
     kapt('com.google.dagger:dagger-compiler:2.27')
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.fragment:fragment-ktx:1.2.3"
 }
