--- a/usgs/build.gradle
+++ b/usgs/build.gradle
@@ -39,6 +39,14 @@ dependencies {
     api 'com.google.dagger:dagger:2.27'
     kapt('com.google.dagger:dagger-compiler:2.27')
 
+    api 'androidx.core:core-ktx:1.2.0'
+    api 'androidx.legacy:legacy-support-v4:1.0.0'
+    api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "androidx.fragment:fragment-ktx:1.2.3"
 }
