--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,16 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    dynamicFeatures = [':usgs']
+    dynamicFeatures = [':usgs', ':covid19']
 }
 
 dependencies {
+    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    api 'androidx.core:core-ktx:1.2.0'
+    api 'androidx.legacy:legacy-support-v4:1.0.0'
+    api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    api 'androidx.core:core-ktx:1.2.0'
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     api 'androidx.core:core-ktx:1.2.0'
     api 'androidx.legacy:legacy-support-v4:1.0.0'
