--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,10 +25,12 @@ jobs:
         name: covid_debug_apk
         path: ./covid19/build/outputs/apk/debug/covid19-debug.apk
     - name: upload usgs debug apk
+      uses: actions/upload-artifact@v1
       with:
         name: usgs_debug_apk
         path: ./usgs/build/outputs/apk/debug/usgs-debug.apk
     - name: upload app debug apk
+      uses: actions/upload-artifact@v1
       with:
         name: app_debug_apk
         path: ./app/build/outputs/apk/debug/app-debug.apk
