--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.5'
     implementation 'com.squareup.okio:okio:2.4.0'
     implementation("com.squareup.moshi:moshi-kotlin:1.9.2")
+    implementation("com.squareup.moshi:moshi-adapters:1.9.2")
     kapt("com.squareup.moshi:moshi-kotlin-codegen:1.9.2")
 
     api 'com.google.dagger:dagger:2.27'
