--- a/cacovid19/src/main/AndroidManifest.xml
+++ b/cacovid19/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         dist:instant="false"
         dist:title="@string/title_cacovid19">
         <dist:delivery>
-            <dist:install-time />
+            <dist:on-demand/>
         </dist:delivery>
         <dist:fusing dist:include="true" />
     </dist:module>
