Some search files and plit app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        >
+        android:name="com.google.android.play.core.splitcompat.SplitCompatApplication" >
         <activity android:name=".MainActivity"
             android:label="@string/app_name"
             >
