--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,20 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: "kotlin-kapt"
 apply plugin: 'com.google.android.gms.oss-licenses-plugin'
 
+apply from:'../gradleDependencies/daggerDependencies.gradle'
+apply from:'../gradleDependencies/networkingDependencies.gradle'
+apply from:'../gradleDependencies/reactiveXDependencies.gradle'
+apply from:'../gradleDependencies/androidXCoreDependencies.gradle'
+apply from:'../gradleDependencies/androidXNavigationDependencies.gradle'
+apply from:'../gradleDependencies/testDependencies.gradle'
+
 android {
-    compileSdkVersion 29
+    compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
         applicationId "com.pshetye.apimodeler"
-        minSdkVersion 28
-        targetSdkVersion 29
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1030000
         versionName "1.3"
 
@@ -35,63 +42,10 @@ android {
 }
 
 dependencies {
-    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    api 'androidx.core:core-ktx:1.2.0'
-    api 'androidx.legacy:legacy-support-v4:1.0.0'
-    api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    api 'androidx.core:core-ktx:1.2.0'
-    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    api 'androidx.core:core-ktx:1.2.0'
-    api 'androidx.legacy:legacy-support-v4:1.0.0'
-    api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    api 'androidx.core:core-ktx:1.2.0'
-    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    api 'androidx.core:core-ktx:1.2.0'
-    api 'androidx.legacy:legacy-support-v4:1.0.0'
-    api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    androidTestImplementation 'androidx.annotation:annotation:1.1.0'
-
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.13'
-    implementation 'com.squareup.retrofit2:retrofit:2.7.2'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.7.2'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.14.7'
-    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.12.5'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.5'
-    implementation 'com.squareup.okio:okio:2.4.0'
-    implementation("com.squareup.moshi:moshi-kotlin:1.9.2")
-    implementation("com.squareup.moshi:moshi-adapters:1.9.2")
-    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.9.2")
-
-    api 'com.google.dagger:dagger:2.27'
-    kapt('com.google.dagger:dagger-compiler:2.27')
-
-    // Navigation Component
-    def nav_version = "2.3.0-alpha06"
-
-    // Kotlin
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-
-    // Dynamic Feature Module Support
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
-
-    // Testing Navigation
-    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
+
+    implementation "com.squareup.moshi:moshi-adapters:${rootProject.ext.moshiAdapters}"
 }
