--- a/usgs/src/main/AndroidManifest.xml
+++ b/usgs/src/main/AndroidManifest.xml
@@ -1,12 +1,20 @@
-<manifest xmlns:dist="http://schemas.android.com/apk/distribution"
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.pshetye.usgs">
 
     <dist:module
         dist:instant="false"
         dist:title="@string/title_usgs">
         <dist:delivery>
-            <dist:install-time/>
+            <dist:install-time />
         </dist:delivery>
+
         <dist:fusing dist:include="true" />
     </dist:module>
+
+    <application>
+        <activity android:name=".activity.UsgsActivity"/>
+    </application>
+
 </manifest>
