Trying to pull in resources from same library module across feature modules
We still end up with a resource not found issue

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
 
     implementation "com.squareup.moshi:moshi-adapters:${rootProject.ext.moshiAdapters}"
+
+    api project(":myresourcelibrary")
 }
