--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 apply from: 'versions.gradle'
 
 buildscript {
+    ext {
+        rootProject.ext.kotlin_version = '1.4.21'
+    }
     ext.kotlin_version = "1.3.72"
     repositories {
         google()
